cha-pre-live-flux2/cha-eks-5a/namespaces/prsftp-systest/network-policy-apps.yaml
####################################################
## Allow ingress from prsftp-systest and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-prsftp-systest
  namespace: prsftp-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: prsftp-systest
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from prsftp-systest ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-prsftp-systest
  namespace: prsftp-systest
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: prsftp-systest

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: prsftp-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: prsftp-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring
